--- a/Mongo Fudbal/Mongo Fudbal/Mongo Fudbal.csproj
+++ b/Mongo Fudbal/Mongo Fudbal/Mongo Fudbal.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DodajLigu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DodajLigu.Designer.cs">
+      <DependentUpon>DodajLigu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dogadjaj.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -59,14 +65,26 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormLiga.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormLiga.Designer.cs">
+      <DependentUpon>FormLiga.cs</DependentUpon>
+    </Compile>
     <Compile Include="Fudbaler.cs" />
     <Compile Include="Klub.cs" />
     <Compile Include="Liga.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utakmica.cs" />
+    <EmbeddedResource Include="DodajLigu.resx">
+      <DependentUpon>DodajLigu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormLiga.resx">
+      <DependentUpon>FormLiga.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -76,6 +94,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -89,6 +108,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="slike\pozadina1.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
