--- a/Mongo Fudbal/Mongo Fudbal/Mongo Fudbal.csproj
+++ b/Mongo Fudbal/Mongo Fudbal/Mongo Fudbal.csproj
@@ -52,6 +52,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DodajDogadjaj.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DodajDogadjaj.Designer.cs">
+      <DependentUpon>DodajDogadjaj.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DodajUtakmicu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DodajUtakmicu.Designer.cs">
+      <DependentUpon>DodajUtakmicu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dogadjaj.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -65,6 +77,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utakmica.cs" />
+    <EmbeddedResource Include="DodajDogadjaj.resx">
+      <DependentUpon>DodajDogadjaj.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DodajUtakmicu.resx">
+      <DependentUpon>DodajUtakmicu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
