--- a/Mongo Fudbal/Mongo Fudbal/Mongo Fudbal.csproj
+++ b/Mongo Fudbal/Mongo Fudbal/Mongo Fudbal.csproj
@@ -58,6 +58,12 @@
     <Compile Include="DodajDogadjaj.Designer.cs">
       <DependentUpon>DodajDogadjaj.cs</DependentUpon>
     </Compile>
+    <Compile Include="DodajLigu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DodajLigu.Designer.cs">
+      <DependentUpon>DodajLigu.cs</DependentUpon>
+    </Compile>
     <Compile Include="DodajUtakmicu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -71,6 +77,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormLiga.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormLiga.Designer.cs">
+      <DependentUpon>FormLiga.cs</DependentUpon>
+    </Compile>
     <Compile Include="Fudbaler.cs" />
     <Compile Include="Klub.cs" />
     <Compile Include="Liga.cs" />
@@ -80,11 +92,17 @@
     <EmbeddedResource Include="DodajDogadjaj.resx">
       <DependentUpon>DodajDogadjaj.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="DodajLigu.resx">
+      <DependentUpon>DodajLigu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DodajUtakmicu.resx">
       <DependentUpon>DodajUtakmicu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormLiga.resx">
+      <DependentUpon>FormLiga.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
