--- a/Mongo Fudbal/Mongo Fudbal/Mongo Fudbal.csproj
+++ b/Mongo Fudbal/Mongo Fudbal/Mongo Fudbal.csproj
@@ -128,6 +128,9 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormFudbaler.resx">
+      <DependentUpon>FormFudbaler.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormLiga.resx">
       <DependentUpon>FormLiga.cs</DependentUpon>
     </EmbeddedResource>
