--- a/Mongo Fudbal/Mongo Fudbal/Mongo Fudbal.csproj
+++ b/Mongo Fudbal/Mongo Fudbal/Mongo Fudbal.csproj
@@ -83,11 +83,11 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormFudbaler.cs">
+    <Compile Include="DodajFudbalera.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormFudbaler.Designer.cs">
-      <DependentUpon>FormFudbaler.cs</DependentUpon>
+    <Compile Include="DodajFudbalera.Designer.cs">
+      <DependentUpon>DodajFudbalera.cs</DependentUpon>
     </Compile>
     <Compile Include="FormKlub.cs">
       <SubType>Form</SubType>
@@ -128,11 +128,14 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormFudbaler.resx">
-      <DependentUpon>FormFudbaler.cs</DependentUpon>
+    <EmbeddedResource Include="DodajFudbalera.resx">
+      <DependentUpon>DodajFudbalera.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormLiga.resx">
       <DependentUpon>FormLiga.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormUtakmica.resx">
+      <DependentUpon>FormUtakmica.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
